fixes img stretch

--- a/src/App.css
+++ b/src/App.css
@@ -338,7 +338,6 @@ input[type=submit]:hover{
   box-shadow: -3px 2px 8px rgba(41, 41, 46, 0.8);
   max-width: 560px;
   max-height: 600px;
-  width: 100%;
 }
 .item-show h3, h4{
   color:rgb(41, 41, 46);
